--- a/ShoppingCartWeb/wwwroot/css/site.css
+++ b/ShoppingCartWeb/wwwroot/css/site.css
@@ -20,3 +20,68 @@ html {
 body {
   margin-bottom: 60px;
 }
+body {
+    font - family: Arial, Helvetica, sans - serif;
+    font - size: 13 px;
+}
+
+svg {
+    cursor: pointer;
+    margin: 15 px;
+}
+
+.top - nav {
+    height: 50 px;
+    background - color: #1e90ff;
+    position: fixed;
+    left: 0;
+    width: 100%;
+    margin: 0px 5px;
+    z-index: 1;
+}
+
+.top-nav h2 {
+    margin: auto;
+}
+
+.side-nav {
+    height: 100%;
+    position: fixed;
+    width: 0px;
+    top: 58px;
+    left: 0;
+    bottom: 0;
+    margin: 0px 5px;
+    background-color: # d3d3d3;
+    transition: 1 s;
+}
+
+.side - nav ul {
+    padding: 0;
+    list - style: none;
+    margin: 0;
+}
+
+    .side - nav ul li {
+        background - color: grey;
+        cursor: pointer;
+        border - radius: 2 px;
+        margin: 2 px;
+        padding: 5 px 0 px;
+        text - align: center;
+    }
+
+        .side - nav ul li: hover {
+            background - color: #008080;
+        }
+
+.side-nav ul li a {
+    text-decoration: none;
+    color: # f9f9f9;
+}
+
+#body - content {
+    position: absolute;
+    top: 58 px;
+    transition: margin - left 1 s;
+}   
