--- a/ShoppingCartWeb/Views/CountryMaster/RemoveCountryMaster.cshtml
+++ b/ShoppingCartWeb/Views/CountryMaster/RemoveCountryMaster.cshtml
@@ -3,30 +3,34 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<form asp-action="UpdateCountryMaster">
+
+<form asp-action="RemoveCountryMaster">
     <br />
     <div class="container border p-3">
-        <h1 class="text-primary">Update Country</h1>
+        <h1 class="text-primary">Remove Country</h1>
         <hr />
-
         <input hidden asp-for="CountryId" />
         <div class="row">
-            <div asp-validation-summary="All" class="text-danger"></div>
+
+            <div class="col-2">
+                <label asp-for="CountryId" class="control-label pt-2" style="font-size:20px;"></label>
+            </div>
+            <div class="col-10 pb-3">
+                <input asp-for="CountryId" disabled class="form-control" />
+            </div>
 
             <div class="col-2">
                 <label asp-for="CountryName" class="control-label pt-2" style="font-size:20px;"></label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="CountryName" class="form-control" />
-                <span asp-validation-for="CountryName" class="text-danger"></span>
+                <input asp-for="CountryName" disabled class="form-control" />
             </div>
-
 
             <div class="col-5 offset-2">
                 <a asp-action="IndexCountryMaster" asp-controller="CountryMaster" class="btn-primary btn form-control ">Back to List</a>
             </div>
             <div class="col-5">
-                <input type="submit" value="Update" class="btn btn-success form-control" />
+                <input type="submit" value="Delete" class="btn btn-success form-control" />
             </div>
         </div>
     </div>
