--- a/ShoppingCartWeb/Views/Shared/_Layout.cshtml
+++ b/ShoppingCartWeb/Views/Shared/_Layout.cshtml
@@ -20,6 +20,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4-4.6.0/jq-3.6.0/dt-1.13.1/b-2.3.3/fc-4.2.1/sc-2.0.7/sb-1.4.0/sp-2.1.0/sl-1.5.0/datatables.min.css" />
+    <!-- Add these in your <head> section -->
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4-4.6.0/jq-3.6.0/dt-1.13.1/b-2.3.3/fc-4.2.1/sc-2.0.7/sb-1.4.0/sp-2.1.0/sl-1.5.0/datatables.min.js"></script>
@@ -58,6 +63,27 @@
     <script src="~/AdminLTE/plugins/jquery-knob/jquery.knob.min.js"></script>
     <script src="~/AdminLTE/plugins/moment/moment.min.js"></script>
     <script src="~/AdminLTE/plugins/daterangepicker/daterangepicker.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $(".autocomplete").autocomplete({
+                source: function (request, response) {
+                    $.ajax({
+                        url: '@Url.Action("GetAutocompleteOptions", "User")',
+                        data: { input: request.term },
+                        dataType: "json",
+                        type: "GET",
+                        success: function (data) {
+                            response(data);
+                        }
+                    });
+                },
+                minLength: 1 // Minimum characters to trigger autocomplete
+            });
+        });
+    </script>
+
+
 
     <script src="~/AdminLTE/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
     <script src="~/AdminLTE/dist/js/adminlte.js"></script>
